# slm-offline-ai-agent

./: .env  .gitignore  Modelfile  README.md
src/: agent.py  config.py  main.py  server.py  tools.py
tests/: pyproject.toml  test_agent.py
web/: index.html
